--- a/index.html
+++ b/index.html
@@ -1245,9 +1245,9 @@
             <p>Laxi,Khokana</p>
             <p>Lalitpur- 21, Nepal</p>
             <p class="mt-3">
-              <strong>Phone:</strong> <span>+1 5589 55488 55</span>
+              <strong>Phone:</strong> <span>+977 9867811182</span>
             </p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p><strong>Email:</strong> <span>khokanaithub@gmail.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
             <a href=""><i class="bi bi-twitter-x"></i></a>
@@ -1294,7 +1294,7 @@
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">Khokana IT Hub</a>
+        Designed by <a href="#">Khokana IT Hub</a>
       </div>
     </div>
   </footer>
