--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
   <!-- Favicons -->
   <link href="assets/img/kih_logo_only.png" rel="icon" />
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+  
+  <link href="assets/img/kih_logo_only.png" rel="KIH" />
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect" />
