--- a/index.html
+++ b/index.html
@@ -3,22 +3,50 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-  <title>Software Development Agency- KIH</title>
-  <meta name="description" content="" />
-  <meta name="keywords" content="" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Software Development Agency - KIH</title>
+  
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="KIH is a software development agency in Nepal, building web, mobile, and AI solutions tailored for your business success." />
+  <meta name="keywords" content="KIH, Khokana IT Hub, software development, web design, mobile app development, IT services Nepal" />
+  <meta name="author" content="KIH - Khokana IT Hub" />
 
   <!-- Favicons -->
-  <link href="assets/img/kih_logo_only.png" rel="icon" />
-  
-  <link href="assets/img/kih_logo_only.png" rel="KIH" />
+  <link rel="icon" type="image/png" href="assets/img/kih-favicon.png" />
+  <link rel="apple-touch-icon" href="assets/img/kih-favicon.png" />
 
-  <!-- Fonts -->
+  <!-- Open Graph (Facebook, LinkedIn) -->
+  <meta property="og:title" content="KIH - Software Development Agency" />
+  <meta property="og:description" content="Web, mobile, and AI solutions from Khokana IT Hub (KIH), a software agency in Nepal." />
+  <meta property="og:image" content="https://yourdomain.com/assets/img/kih_logo.png" />
+  <meta property="og:url" content="https://yourdomain.com" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="KIH - Software Development Agency" />
+  <meta name="twitter:description" content="Web, mobile, and AI solutions from Khokana IT Hub." />
+  <meta name="twitter:image" content="https://yourdomain.com/assets/img/kih_logo.png" />
+
+  <!-- Structured Data: Organization Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "KIH - Khokana IT Hub",
+    "url": "https://yourdomain.com",
+    "logo": "https://yourdomain.com/assets/img/kih_logo.png",
+    "sameAs": [
+      "https://facebook.com/yourpage",
+      "https://linkedin.com/company/yourcompany"
+    ]
+  }
+  </script>
+
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect" />
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Inter:wght@400;700&family=Nunito:wght@400;700&display=swap" rel="stylesheet" />
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
@@ -29,9 +57,8 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet" />
-
-
 </head>
+
 
 <body class="index-page">
  <header id="header" class="header d-flex align-items-center fixed-top">
