add domain in seo

--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
   <meta name="author" content="KIH - Khokana IT Hub" />
 
   <!-- Favicons -->
-  <link rel="icon" type="image/png" href="assets/img/kih-favicon.png" />
-  <link rel="apple-touch-icon" href="assets/img/kih-favicon.png" />
+  <link rel="icon" type="image/png" href="https://khokanaithub.com.np/assets/img/kih-favicon.png" />
+  <link rel="apple-touch-icon" href="https://khokanaithub.com.np/assets/img/kih-favicon.png" />
 
   <!-- Open Graph (Facebook, LinkedIn) -->
   <meta property="og:title" content="KIH - Software Development Agency" />
   <meta property="og:description" content="Web, mobile, and AI solutions from Khokana IT Hub (KIH), a software agency in Nepal." />
-  <meta property="og:image" content="https://yourdomain.com/assets/img/kih_logo.png" />
-  <meta property="og:url" content="https://yourdomain.com" />
+  <meta property="og:image" content="https://khokanaithub.com.np/assets/img/kih_logo.png" />
+  <meta property="og:url" content="https://khokanaithub.com.np" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="KIH - Software Development Agency" />
   <meta name="twitter:description" content="Web, mobile, and AI solutions from Khokana IT Hub." />
-  <meta name="twitter:image" content="https://yourdomain.com/assets/img/kih_logo.png" />
+  <meta name="twitter:image" content="https://khokanaithub.com.np/assets/img/kih_logo.png" />
 
   <!-- Structured Data: Organization Schema -->
   <script type="application/ld+json">
@@ -34,8 +34,8 @@
     "@context": "https://schema.org",
     "@type": "Organization",
     "name": "KIH - Khokana IT Hub",
-    "url": "https://yourdomain.com",
-    "logo": "https://yourdomain.com/assets/img/kih_logo.png",
+    "url": "https://khokanaithub.com.np",
+    "logo": "https://khokanaithub.com.np/assets/img/kih_logo.png",
     "sameAs": [
       "https://facebook.com/yourpage",
       "https://linkedin.com/company/yourcompany"
