add  more keyword

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   
   <!-- SEO Meta Tags -->
   <meta name="description" content="KIH is a software development agency in Nepal, building web, mobile, and AI solutions tailored for your business success." />
-  <meta name="keywords" content="KIH, Khokana IT Hub, software development, web design, mobile app development, IT services Nepal" />
+ <meta name="keywords" content="KIH, Khokana IT Hub, software development, web design, mobile app development, IT services Nepal, Khokana, Sikali, Shreekali, Shikali, software, Ward-21, LMC-21, Khokana-oil, mustard oil" />
+
   <meta name="author" content="KIH - Khokana IT Hub" />
 
   <!-- Favicons -->
